--- a/pct-infopage/src/components/navbar/navbar.css
+++ b/pct-infopage/src/components/navbar/navbar.css
@@ -24,10 +24,20 @@
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 0.6rem;
-    /* font-weight: 200; */
     color: #000;
     text-align: center;
     vertical-align: middle;
+    cursor: pointer;
+}
+
+.navbar-button-container {
+    margin-left: auto;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .navbar-button {
@@ -41,23 +51,16 @@
     font-family:  'Nunito', sans-serif;
     background-color: #253441;
     box-shadow: #253441 0px 0px 10px 0px;
-    color: white;
+    color: #dcdcdc;
     align-self: flex-start;
     transition: background-color 0.25s;
 }
 .navbar-button:hover {
-    background-color: white;
+    background-color: #dcdcdc;
     color: #000;
-    border-color: white;
+    border-color: #dcdcdc;
     margin-left: 1rem;
     border: #253441 3px solid;
-}
-
-.navbar-button-container {
-    margin-left: auto;
-    margin-top: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
 }
 
 @media (max-width: 720px) {
