--- a/pct-infopage/src/components/pdfComponent/pdfComponent.css
+++ b/pct-infopage/src/components/pdfComponent/pdfComponent.css
@@ -4,9 +4,10 @@
     margin-right: 1rem;
     margin-bottom: 1rem;
     color: #dcdcdc;
-    font-size: 1.8rem;
+    font-size: 2.4rem;
     font-weight: thin;
     text-align: center;
+    border-bottom: #dcdcdc 4px solid;
 }
 
 .body-pricing-container {
@@ -19,9 +20,8 @@
     margin-top: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-bottom: 1rem;
     color: #ffde00;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: thin;
     text-align: center;
 }
@@ -29,12 +29,16 @@
 .body-pricing-price {
     margin-top: 1rem;
     margin-right: 1rem;
-    margin-bottom: 1rem;
     color: #ffde00;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.2rem;
+    font-weight: thin;
     text-align: center;
-    border-bottom: black 4px solid;
+    border-bottom: #253441 2px solid;
+    transition: ease-in-out 0.35s;
+}
+
+.body-pricing-price:hover {
+    border-bottom: #253441 4px solid;
 }
 
 .body-enroll-button {
@@ -52,6 +56,36 @@
     box-shadow: #253441 0px 0px 10px 0px;
 }
 
+.body-button {
+    margin-left: 1rem;
+    cursor: pointer;
+    font-weight: 500;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: 100;
+    font-family:  'Nunito', sans-serif;
+    background-color: #253441;
+    box-shadow: #253441 0px 0px 10px 0px;
+    color: #dcdcdc;
+    transition: background-color 0.25s;
+    text-align: center;
+}
+.body-button:hover {
+    background-color: #dcdcdc;
+    color: #000;
+    border-color: #dcdcdc;
+    text-align: center;
+    border: #253441 3px solid;
+}
+
+.body-button-container {
+    margin-top: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    align-items: center;
+}
+
 .body-enroll-button:hover {
     border: none;
     background-color: #dcdcdc;
@@ -60,7 +94,6 @@
 }
 
 .body-pdf {
-    margin-top: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
