--- a/pct-infopage/src/components/pdfComponent/pdfComponent.css
+++ b/pct-infopage/src/components/pdfComponent/pdfComponent.css
@@ -116,8 +116,8 @@
     border: #000 1px solid;
     border-radius: 10px;
     background-color: #fff;
-    width: 80vw;
-    height: 80vh;
+    width: auto;
+    height: auto;
     box-shadow: #253441 0px 0px 10px 0px;
 }
 
