--- a/pct-infopage/src/components/body/body.css
+++ b/pct-infopage/src/components/body/body.css
@@ -8,7 +8,7 @@
 .body-subtitle {
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-top: 7rem;
+    /* margin-top: 7rem; */
     color: #dcdcdc;
     font-size: 2.5rem;
     font-weight: lighter;
@@ -83,7 +83,7 @@
 
 @media (min-width: 0px) and (max-width: 320px) {
     .body{
-        margin-top: 12rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
         margin-left: 0rem;
         margin-right: 0rem;
@@ -102,7 +102,7 @@
 
 @media (min-width: 321px) and (max-width: 336px) {
     .body{
-        margin-top: 12rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
         margin-left: 0rem;
         margin-right: 0rem;
@@ -121,56 +121,56 @@
 
 @media (min-width: 336px) and (max-width: 360px) {
     .body{
-        margin-top: 12rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 361px) and (max-width: 412px) {
     .body{
-        margin-top: 12rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 413px) and (max-width: 444px) {
     .body{
-        margin-top: 10rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 444px) and (max-width: 516px) {
     .body{
-        margin-top: 10rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 517px) and (max-width: 520px) {
     .body{
-        margin-top: 10rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 521px) and (max-width: 608px) {
     .body{
-        margin-top: 10rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 609px) and (max-width: 688px) {
     .body{
-        margin-top: 8rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
 
 @media (min-width: 688px) and (max-width: 720px) {
     .body{
-        margin-top: 8rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 }
