--- a/pct-infopage/src/components/navbar/navbar.css
+++ b/pct-infopage/src/components/navbar/navbar.css
@@ -52,7 +52,6 @@
     background-color: #253441;
     box-shadow: #253441 0px 0px 10px 0px;
     color: #dcdcdc;
-    align-self: flex-start;
     transition: background-color 0.25s;
 }
 .navbar-button:hover {
@@ -63,15 +62,41 @@
     border: #253441 3px solid;
 }
 
-@media (max-width: 720px) {
+@media (min-width: 425px) and (max-width: 720px) {
     .navbar {
         flex-direction: column;
         align-items: center;
+        position: relative;
     }
     .navbar-button-container {
+        flex-direction: row;
+        align-items: center;
         margin-right: 1rem;
         margin-top: 1rem;
-        margin-bottom: 1rem;
         margin-left: 0;
+    }
+    .navbar-button {
+        margin-left: 1rem;
+        margin-top: 1rem;
+    }
+}
+
+@media (max-width: 425px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+    .navbar-button-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 1rem;
+        margin-top: 1rem;
+        margin-left: 0rem;
+    }
+    .navbar-button {
+        margin-left: 0;
+        margin-top: 1rem;
     }
   }
