fix: fix footer responsiveness

--- a/pct-infopage/src/components/footer/footer.css
+++ b/pct-infopage/src/components/footer/footer.css
@@ -17,6 +17,7 @@
 .footer-div-title-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .footer-div-title {
     color: #dcdcdc;
