--- a/pct-infopage/src/components/body/body.css
+++ b/pct-infopage/src/components/body/body.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100vw;
 }
 
 .body-subtitle {
     margin-left: 1rem;
     margin-right: 1rem;
-    /* margin-top: 7rem; */
     color: #dcdcdc;
     font-size: 2.5rem;
     font-weight: lighter;
@@ -170,7 +170,7 @@
 
 @media (min-width: 688px) and (max-width: 720px) {
     .body{
-        margin-top: 2rem;
+        margin-top: 1rem;
         margin-bottom: 1rem;
     }
 }
