--- a/pct-infopage/src/components/navbar/navbar.css
+++ b/pct-infopage/src/components/navbar/navbar.css
@@ -11,6 +11,7 @@
     width: 100vw;
     box-shadow: #253441 0px 0px 10px 0px;
     z-index: 1000;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navbar-logo {
