--- a/pct-infopage/src/components/pdfComponent/pdfComponent.css
+++ b/pct-infopage/src/components/pdfComponent/pdfComponent.css
@@ -4,6 +4,7 @@
     margin-right: 1rem;
     margin-bottom: 1rem;
     color: #dcdcdc;
+    font-family: 'Roboto', sans-serif;
     font-size: 2.4rem;
     font-weight: thin;
     text-align: center;
@@ -55,6 +56,7 @@
     background-color: #ffde00;
     color: #374f62;
     box-shadow: #253441 0px 0px 10px 0px;
+    position: relative;
 }
 
 .body-button {
@@ -70,6 +72,7 @@
     color: #dcdcdc;
     transition: background-color 0.25s;
     text-align: center;
+    position: relative;
 }
 .body-button:hover {
     background-color: #dcdcdc;
@@ -82,9 +85,11 @@
 .body-button-container {
     margin-top: 1rem;
     margin-right: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 8rem;
     text-align: center;
     align-items: center;
+    position: relative;
+    /* z-index: 1000; */
 }
 
 .body-enroll-button:hover {
@@ -104,12 +109,13 @@
     font-weight: thin;
     text-align: center;
     border-bottom: #dcdcdc 4px solid;
+    position: relative;
 }
 
 .body-pdf {
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-bottom: 8rem;
+    margin-bottom: 2rem;
     text-align: center;
     align-items: center;
     border: #000 1px solid;
@@ -118,6 +124,7 @@
     width: auto;
     height: auto;
     box-shadow: #253441 0px 0px 10px 0px;
+    position: relative;
 }
 
 @media (max-width: 337px) {
