--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -57,7 +57,8 @@
     position: sticky;
     margin-right: 1rem;
 }
-@media (max-width: 720px) {
+
+@media (max-width: 550px) {
     .footer-div{
         position: relative;
         flex-direction: column;
@@ -76,6 +77,60 @@
         margin-left: 0rem;
     }
     .footer-div-link-list{
+        margin-top: 1.5rem;
+        margin-left: 0rem;
+        margin-bottom: 1rem;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (min-width: 540px) and (max-width: 720px) {
+    .footer-div{
+        position: relative;
+        flex-direction: column;
+        margin-left: 0rem;
+        gap: 0.5rem;
+    }
+    .footer-div-logo {
+        margin-left: 0rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0rem;
+    }
+    .footer-div-title{
+        margin-left: 0rem;
+    }
+    .footer-div-subtitle{
+        margin-left: 0rem;
+    }
+    .footer-div-link-list{
+        margin-top: 1rem;
+        margin-left: 0.5rem;
+        margin-bottom: 1rem;
+        flex-direction: row;
+        align-items: center;
+    }
+}
+@media (min-width: 720px) and (max-width: 870px) {
+    .footer-div{
+        position: relative;
+        flex-direction: column;
+        margin-left: 0rem;
+        gap: 0.5rem;
+    }
+    .footer-div-logo {
+        margin-left: 0rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0rem;
+    }
+    .footer-div-title{
+        margin-left: 0rem;
+    }
+    .footer-div-subtitle{
+        margin-left: 0rem;
+    }
+    .footer-div-link-list{
+        margin-top: 1rem;
         margin-left: 0.5rem;
         margin-bottom: 1rem;
         flex-direction: row;
