--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer-div {
     background-color: black;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     position: relative;
