--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     box-shadow: #253441 0px 0px 10px 0px;
     z-index: 1000;
     font-family: 'Roboto', sans-serif;
